# Eurobot-2026-VisionOnBoard

./: .gitignore  README.md  inside_start_vision_tmux.sh  start_docker.sh  start_vision_tmux.sh  white_back_camera.sh  white_left_camera.sh
config/vins/: vins_rviz_config.rviz
config/vins/realsense/: realsense_left.yaml  realsense_stereo_imu_config.yaml  realsense_stereo_no_imu_config.yaml
docker/: .env  Dockerfile  compose.yaml
src/aruco_ros/aruco_object/: CMakeLists.txt  package.xml
src/aruco_ros/aruco_object/config/: combined_params.yaml  params.yaml  scanner_params.yaml
src/aruco_ros/aruco_object/include/aruco_cluster_detect/: object_detector_node.hpp  process_logic.hpp
src/aruco_ros/aruco_object/include/my_package/: my_node.hpp  process_logic.hpp
src/aruco_ros/aruco_object/launch/: detector_multi.launch.py  multi_camera.launch.py  object_detector.launch.py  scanner.launch.py  scanner_multi.launch.py
src/aruco_ros/aruco_object/src/: aruco_row_scanner_node.cpp  object_detector.cpp  object_detector.hpp  process_logic.cpp
src/object_feedback/: CMakeLists.txt  package.xml
src/object_feedback/launch/: obj_fb_bringup.launch.py  single_feedback.launch.py
src/object_feedback/src/: feedback_all.cpp  object_feedback.cpp
src/realsense_ros/realsense2_camera/launch/: rs_launch.py  rs_multi_camera_launch.py
src/vins_fusion/camera_models/: CMakeLists.txt  package.xml
src/vins_fusion/camera_models/src/calib/: CameraCalibration.cc
src/vins_fusion/camera_models/src/chessboard/: Chessboard.cc
src/vins_fusion/global_fusion/: CMakeLists.txt  package.xml
src/vins_fusion/global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
src/vins_fusion/loop_fusion/: CMakeLists.txt  package.xml
src/vins_fusion/loop_fusion/src/: image_encodings.hpp  keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
src/vins_fusion/loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
src/vins_fusion/vins/: CMakeLists.txt  package.xml
src/vins_fusion/vins/launch/: run.launch.xml  vins_rviz.launch.xml
src/vins_fusion/vins/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
src/vins_fusion/vins/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/vins_fusion/vins/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  marginalization_factor.cpp  marginalization_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
src/vins_fusion/vins/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/vins_fusion/vins/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.h
src/vins_fusion/vins/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
